fix: keep vertical scrollbar always visible for cls

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   min-height: 100%;
   scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 body {
